--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -31,7 +31,7 @@
       <img src="/assets/tiktok_logo.png" alt="TikTok" class="icon"> {{ 'DOWNLOAD_TIKTOK' | translate }}
     </a>
     <a routerLink="/admin-config" class="button admin-button">
-      <img src="/assets/config-icon.png" alt="Admin Config" class="icon"> {{ 'ADMIN_CONFIG' | translate }}
+      <img src="/assets/admin-btn.png" alt="Admin Config" class="icon"> {{ 'ADMIN_CONFIG' | translate }}
     </a>
   </div>
   
