--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -4,6 +4,10 @@
     <link rel="icon" type="image/png" href="assets/Logo App.png">
 
    <!--  <h1 class="app-name">{{ 'APP_NAME' | translate }}</h1> -->
+<a routerLink="/admin-config" class="admin-top-button">
+  <img src="/assets/admin-btn.png" alt="Admin Config" class="icon"> Admin
+</a>
+
   </div>
 
  <p class="subtitle">{{ 'SUBTITLE' | translate }}</p>
@@ -30,9 +34,7 @@
     <a routerLink="/tiktok-downloads" class="button tiktok-button">
       <img src="/assets/tiktok_logo.png" alt="TikTok" class="icon"> {{ 'DOWNLOAD_TIKTOK' | translate }}
     </a>
-    <a routerLink="/admin-config" class="button admin-button">
-      <img src="/assets/admin-btn.png" alt="Admin Config" class="icon"> {{ 'ADMIN_CONFIG' | translate }}
-    </a>
+
   </div>
   
 
