--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -3,52 +3,59 @@
     <img src="/assets/EverLoad home logo.png" alt="" class="everload-logo">
     <link rel="icon" type="image/png" href="assets/Logo App.png">
 
-   <!--  <h1 class="app-name">{{ 'APP_NAME' | translate }}</h1> -->
-<a routerLink="/admin-config" class="admin-top-button">
-  <img src="/assets/admin-btn.png" alt="Admin Config" class="icon"> Admin
-</a>
 
+    <!-- ====== MENÚ HAMBURGUESA ====== -->
+    <input type="checkbox" id="navcheck" role="button" title="menu">
+    <label for="navcheck" aria-hidden="true" title="menu">
+      <span class="burger">
+        <span class="bar"><span class="visuallyhidden"></span></span>
+      </span>
+    </label>
+    <nav id="menu">
+      <a routerLink="/admin-config" class="admin-menu-button in-menu">Admin</a>
+    </nav>
+    <!-- ====== FIN MENÚ HAMBURGUESA ====== -->
   </div>
 
- <p class="subtitle">{{ 'SUBTITLE' | translate }}</p>
+  <main>
+    <div class="content">
+      <p class="subtitle">{{ 'SUBTITLE' | translate }}</p>
 
-  <div class="options">
-    <a routerLink="/youtube-downloads" class="button youtube-button">
-      <img src="/assets/youtube-icon-logo-719479.png" alt="YouTube" class="icon"> {{ 'DOWNLOAD_YOUTUBE' | translate }}
-    </a>
-  
-    <a routerLink="/twitter-downloads" class="button twitter-button">
-      <img src="/assets/twitter-icon.png" alt="Twitter" class="icon"> {{ 'DOWNLOAD_TWITTER' | translate }}
-    </a>
-  
-    <a routerLink="/facebook-downloads" class="button facebook-button">
-      <img src="/assets/fb sin fondo.png" alt="Facebook" class="icon"> {{ 'DOWNLOAD_FACEBOOK' | translate }}
-    </a>
-  
-    <a routerLink="/instagram-downloads" class="button instagram-button">
-      <img src="/assets/instagram-icon.png" alt="Instagram" class="icon"> {{ 'DOWNLOAD_INSTAGRAM' | translate }}
-    </a>
-    <a routerLink="/spotify-downloads" class="button spotify-button">
-      <img src="assets/Spotify.png" alt="Spotify" class="icon"> {{ 'DOWNLOAD_SPOTIFY' | translate }}
-    </a>
-    <a routerLink="/tiktok-downloads" class="button tiktok-button">
-      <img src="/assets/tiktok_logo.png" alt="TikTok" class="icon"> {{ 'DOWNLOAD_TIKTOK' | translate }}
-    </a>
+      <div class="options">
+        <a routerLink="/youtube-downloads" class="button youtube-button">
+          <img src="/assets/youtube-icon-logo-719479.png" alt="YouTube" class="icon"> {{ 'DOWNLOAD_YOUTUBE' | translate
+          }}
+        </a>
+        <a routerLink="/twitter-downloads" class="button twitter-button">
+          <img src="/assets/twitter-icon.png" alt="Twitter" class="icon"> {{ 'DOWNLOAD_TWITTER' | translate }}
+        </a>
+        <a routerLink="/facebook-downloads" class="button facebook-button">
+          <img src="/assets/fb sin fondo.png" alt="Facebook" class="icon"> {{ 'DOWNLOAD_FACEBOOK' | translate }}
+        </a>
+        <a routerLink="/instagram-downloads" class="button instagram-button">
+          <img src="/assets/instagram-icon.png" alt="Instagram" class="icon"> {{ 'DOWNLOAD_INSTAGRAM' | translate }}
+        </a>
+        <a routerLink="/spotify-downloads" class="button spotify-button">
+          <img src="assets/Spotify.png" alt="Spotify" class="icon"> {{ 'DOWNLOAD_SPOTIFY' | translate }}
+        </a>
+        <a routerLink="/tiktok-downloads" class="button tiktok-button">
+          <img src="/assets/tiktok_logo.png" alt="TikTok" class="icon"> {{ 'DOWNLOAD_TIKTOK' | translate }}
+        </a>
+      </div>
 
-  </div>
-  
+      <div class="creator-info">
+        {{ 'CREATED_BY' | translate }} <strong>Xián Duán Taboada</strong> -
+        <a href="https://github.com/xianDT01" target="_blank">GitHub</a>
+      </div>
 
-  <div class="creator-info">
-    {{ 'CREATED_BY' | translate }} <strong>Xián Duán Taboada</strong> - 
-    <a href="https://github.com/xianDT01" target="_blank">GitHub</a>
-  </div>
-
-  <div class="language-selector">
-    <button (click)="changeLanguage('es')">🇪🇸 Español</button>
-    <button (click)="changeLanguage('en')">🇬🇧 English</button>
-    <button (click)="changeLanguage('gl')">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Flag_of_Galicia.svg" 
-           alt="Bandera de Galicia" width="20"> Galego
-    </button>
-  </div>
+      <div class="language-selector">
+        <button (click)="changeLanguage('es')">🇪🇸 Español</button>
+        <button (click)="changeLanguage('en')">🇬🇧 English</button>
+        <button (click)="changeLanguage('gl')">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Flag_of_Galicia.svg" alt="Bandera de Galicia"
+            width="20"> Galego
+        </button>
+      </div>
+    </div>
+  </main>
 </div>
