--- a/everload-front/src/app/components/facebook-downloads/facebook-downloads.component.html
+++ b/everload-front/src/app/components/facebook-downloads/facebook-downloads.component.html
@@ -9,12 +9,8 @@
 
       <p class="subtitle">{{ 'SUBTITLE_FACEBOOK' | translate }}</p>
 
-      <input
-        type="text"
-        [(ngModel)]="videoUrl"
-        placeholder="{{ 'PASTE_FACEBOOK_URL' | translate }}"
-        class="login-input"
-      />
+      <input type="text" [(ngModel)]="videoUrl" placeholder="{{ 'PASTE_FACEBOOK_URL' | translate }}"
+        class="login-input" />
 
       <button class="login-button facebook-button" (click)="download()" [disabled]="loading">
         <span *ngIf="!loading">{{ 'DOWNLOAD_FACEBOOK' | translate }}</span>
@@ -26,12 +22,20 @@
       <div *ngIf="error" class="error-msg">{{ error }}</div>
 
       <div class="language-selector">
-        <button (click)="changeLanguage('es')">🇪🇸</button>
-        <button (click)="changeLanguage('en')">🇬🇧</button>
-        <button (click)="changeLanguage('gl')">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Flag_of_Galicia.svg" alt="Galicia" width="20" />
+        <button (click)="changeLanguage('es')" aria-label="Cambiar a español">
+          <img src="https://flagcdn.com/w40/es.png" alt="España" class="flag" />
+        </button>
+
+        <button (click)="changeLanguage('en')" aria-label="Switch to English">
+          <img src="https://flagcdn.com/w40/gb.png" alt="Reino Unido" class="flag" />
+        </button>
+
+        <button (click)="changeLanguage('gl')" aria-label="Cambiar a galego">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Flag_of_Galicia.svg" alt="Galicia"
+            class="flag" />
         </button>
       </div>
+
     </div>
   </div>
 </div>
