--- a/everload-front/src/app/components/tiktok-downloads/tiktok-downloads.component.css
+++ b/everload-front/src/app/components/tiktok-downloads/tiktok-downloads.component.css
@@ -81,15 +81,27 @@
 /* Selector de idioma */
 .language-selector {
   margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .language-selector button {
   background: none;
   border: none;
-  font-size: 1.2rem;
   cursor: pointer;
-  margin: 0 5px;
+  padding: 0;
 }
+
+.language-selector .flag {
+  width: 30px;
+  height: 20px;
+  object-fit: contain;
+  display: inline-block;
+}
+
+
 
 /* Mensaje de error */
 .error-msg {
