added about page

--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -13,6 +13,7 @@
     </label>
     <nav id="menu">
       <a routerLink="/admin-config" class="admin-menu-button in-menu">Admin</a>
+      <a routerLink="/about-app" class="about-menu-button in-menu">About</a>
     </nav>
     <!-- ====== FIN MENÚ HAMBURGUESA ====== -->
   </div>
